# nolock

./: .gitignore  README.MD  README.md  ZenCode.md  index.html  package-lock.json  package.json  test.py  test_model_behavior.py  test_tool_chain.py  test_web_search_e2e.sh  vite.config.ts
.planning/: BACKEND.md  FRONTEND.md  IMPLEMENTATION_STATUS.md  TERMINAL_MEMORY.md  TESTS.md  TODO.md  implementation-checklist.md  search-feature-plan.md
.rlhf/: README.md  requirements.txt
src/: App.tsx  debug-marked.test.mjs  styles.css
src-tauri/: Cargo.toml  hello_world.rs  tauri.conf.json  test.rs
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  linter.rs  main.rs  terminal_memory.rs
src/__tests__/: App.test.tsx  getFileColor.test.ts  getLanguage.test.ts
src/components/: AISettings.tsx  AgentManager.tsx  BrowserPanel.tsx  ChatModelPanel.tsx  ChatPanel.tsx  DirectoryPicker.tsx  Editor.tsx  EditorSettings.tsx  FITMModelPanel.tsx  FileAutocomplete.tsx  FileExplorer.tsx  MenuBar.tsx  ModelProvidersPanel.tsx  ModelSelector.tsx  ResizableHandle.tsx  RlhfPanel.tsx  SearchPanel.tsx  ShortcutsScreen.tsx  SkillAutocomplete.tsx  StatusBar.tsx  Terminal.tsx  TerminalMemoryOverlay.tsx  ToolAutocomplete.tsx  ToolsPanel.tsx  fitm.ts
src/components/__tests__/: AISettings.test.tsx  BrowserPanel.test.tsx  ChatPanel.test.tsx  ChatPanelNewFeatures.test.tsx  DirectoryPicker.test.tsx  DpoChoice.test.tsx  EditorFITM.test.tsx  FITME2E.test.ts  MarkdownContent.test.tsx  fitm.test.ts  (+5 more)
src/lib/: models.ts  rlhf.ts  secrets.ts  tokenizer.ts
src/test/: setup.ts  tauri-mock.ts
(+2 files in other folders)
